--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,9 @@
 # .htaccess
 ErrorDocument 404 /404.php
+# Enable URL rewriting
+RewriteEngine On
+
+# If file or directory does not exist, redirect to 404.php
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$ /public/pages/404.php [L]
